# proposal_craft_crew

./: README.md  pyproject.toml  report.md
db/: chroma.sqlite3
src/proposal_craft/: crew.py  main.py
src/proposal_craft/config/: agents.yaml  tasks.yaml
